<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_conn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_bg"
                android:text="@string/btn_conn"
                android:textColor="#ffffff"></Button>

            <EditText
                android:id="@+id/txtContent"
                android:layout_width="match_parent"
                android:layout_height="145dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical|top"
                android:hint="@string/input_content"
                android:text="@string/txtContent"
                android:textSize="16sp">

            </EditText>

            <LinearLayout
                android:id="@+id/llay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnSendTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_bg"
                    android:text="@string/btnSendTxt"
                    android:textColor="#ffffff"></Button>

                <Button
                    android:id="@+id/btnPrintTestPage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/shape_bg"
                    android:text="@string/btnPrintTestPage"
                    android:textColor="#ffffff"></Button>

                <Button
                    android:id="@+id/btnDisconnect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_bg"
                    android:text="@string/btnDisconnect"
                    android:textColor="#ffffff"></Button>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/remark"
                android:textColor="#000000" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
